style: prevent page overflow

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,7 +1,17 @@
 @import 'tailwindcss';
 
+html,
 body {
-    margin: 20px;
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+
+}
+
+body {
+    padding: 8px;
+    overflow: clip;
 }
 
 button {
